--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - CV</title>
+    <title>Thomas Lynch</title>
+    <title>Online CV</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,8 +34,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Contact: your.email@example.com | LinkedIn: linkedin.com/in/yourprofile</p>
+        <h1>Thomas Lynch</h1>
+        <p>Contact: lynchthomasd@gmail.com | LinkedIn: https://www.linkedin.com/in/lynchthomasd/</p>
     </header>
     <section>
         <h2 class="section-title">About Me</h2>
@@ -60,6 +61,12 @@
             <li>Skill 2</li>
             <li>Skill 3</li>
         </ul>
+    </section>
+    <section>
+        <h2 class="section-title">Contact Me</h2>
+    </section>
+    <section>
+        <h2 class="section-title">Projects</h2>
     </section>
 </body>
 </html>
