--- a/index.html
+++ b/index.html
@@ -8,16 +8,37 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
             padding: 0;
             line-height: 1.6;
         }
         header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
             text-align: center;
-            margin-bottom: 30px;
+            z-index: 1000;
         }
-        header h1 {
-            margin: 0;
+        header nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        header nav a {
+            color: white;
+            text-decoration: none;
+            font-size: 1em;
+        }
+        header nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            margin-top: 60px; /* To avoid content being hidden under the fixed header */
+            padding: 20px;
         }
         section {
             margin-bottom: 20px;
@@ -34,39 +55,40 @@
 </head>
 <body>
     <header>
-        <h1>Thomas Lynch</h1>
-        <p>Contact: lynchthomasd@gmail.com | LinkedIn: https://www.linkedin.com/in/lynchthomasd/</p>
+        <h1>Your Name</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#experience">Experience</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+        </nav>
     </header>
-    <section>
-        <h2 class="section-title">About Me</h2>
-        <p>A brief description about yourself, your goals, and what you specialize in.</p>
-    </section>
-    <section>
-        <h2 class="section-title">Experience</h2>
-        <ul>
-            <li><strong>Job Title</strong> at Company Name (Dates) <br> Describe your role and achievements.</li>
-            <li><strong>Job Title</strong> at Company Name (Dates) <br> Describe your role and achievements.</li>
-        </ul>
-    </section>
-    <section>
-        <h2 class="section-title">Education</h2>
-        <ul>
-            <li><strong>Degree</strong>, Institution Name (Dates) <br> Relevant coursework or honors.</li>
-        </ul>
-    </section>
-    <section>
-        <h2 class="section-title">Skills</h2>
-        <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-        </ul>
-    </section>
-    <section>
-        <h2 class="section-title">Contact Me</h2>
-    </section>
-    <section>
-        <h2 class="section-title">Projects</h2>
-    </section>
+    <main>
+        <section id="about">
+            <h2 class="section-title">About Me</h2>
+            <p>A brief description about yourself, your goals, and what you specialize in.</p>
+        </section>
+        <section id="experience">
+            <h2 class="section-title">Experience</h2>
+            <ul>
+                <li><strong>Job Title</strong> at Company Name (Dates) <br> Describe your role and achievements.</li>
+                <li><strong>Job Title</strong> at Company Name (Dates) <br> Describe your role and achievements.</li>
+            </ul>
+        </section>
+        <section id="education">
+            <h2 class="section-title">Education</h2>
+            <ul>
+                <li><strong>Degree</strong>, Institution Name (Dates) <br> Relevant coursework or honors.</li>
+            </ul>
+        </section>
+        <section id="skills">
+            <h2 class="section-title">Skills</h2>
+            <ul>
+                <li>Skill 1</li>
+                <li>Skill 2</li>
+                <li>Skill 3</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
