--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        <h1>Thomas Lynch</h1>
+        <a href="#">Thomas Lynch</a>
         <nav>
             <a href="#about">About Me</a>
             <a href="#experience">Experience</a>
