--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
             padding: 0;
             line-height: 1.6;
         }
+        .splash {
+            position: relative;
+            width: 100%;
+            height: 300px;
+            background-image: url('testimage.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+        .splash-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            text-align: center;
+            font-size: 2.5em;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
         header {
             position: fixed;
             top: 0;
@@ -54,6 +73,9 @@
     </style>
 </head>
 <body>
+    <div class="splash">
+        <div class="splash-text">Thomas Lynch</div>
+    </div>
     <header>
         <a href="#">Thomas Lynch</a>
         <nav>
