--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             position: relative;
             width: 100%;
             height: 300px;
-            background-image: url('testimage.jpg');
+            background-image: url('testimage.jpg.png');
             background-size: cover;
             background-position: center;
         }
