--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             text-decoration: underline;
         }
         main {
-            /*margin-top: 100px; /* To avoid content being hidden under the fixed header */
+            margin-top: 100px;
             padding: 20px;
         }
         section {
