--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
         <section id="contactme" class= "text-center my-5" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title mb-4">Contact Me</h2>
-            <div class="d-flex justify-content-center gap-7">
+            <div class="d-flex justify-content-center align-items-center gap-7">
                 <a href="https://facebook.com" target="_blank">
                     <image src="facebook-icon.png" alt="Facebook" width="60" height="60"></image>
                 </a>
@@ -130,7 +130,7 @@
                     <image src="linkedin-icon.png" alt="LinkedIn" width="60" height="60"></image>
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <image src="instagram-icon.png" alt="Instagram" class="rounded icon-border" width="60" height="60"></image>
+                    <image src="instagram-icon.png" alt="Instagram" width="60" height="60"></image>
                 </a>
             </div>
         </section>
