--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
                 <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<li>
             </ul>
         </section>
-        <section id="contactme" class= "text-center my-5" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title mb-4">Contact Me</h2>
-            <div class="d-flex justify-content-center align-items-center gap-4">
+        <section id="contactme" style="padding-top: 160px; margin-top: -60px;>
+            <h2 class="section-title">Contact Me</h2>
+            <div class="d-flex justify-content-center align-items-center gap-4 social-links">
                 <a href="https://facebook.com" target="_blank">
-                    <image src="facebook-icon.png" alt="Facebook" width="60" height="60"></image>
+                    <image src="facebook-icon.png" alt="Facebook" width="60" height="60">
                 </a>
                 <a href="https://linkedin.com" target="_blank">
-                    <image src="linkedin-icon.png" alt="LinkedIn" width="60" height="60"></image>
+                    <image src="linkedin-icon.png" alt="LinkedIn" width="60" height="60">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <image src="instagram-icon.png" alt="Instagram" width="60" height="60"></image>
+                    <image src="instagram-icon.png" alt="Instagram" width="60" height="60">
                 </a>
             </div>
         </section>
