--- a/index.html
+++ b/index.html
@@ -90,35 +90,55 @@
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
         <section id="about" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">About Me</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h2 class="section-title">About Me</h2>   
+            <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
+            <p>All my socials are linked here and in the Contact Me section</p>
+            <div class="d-flex justify-content-center align-items-center gap-4 social-links">
+                <a href="https://facebook.com" target="_blank">
+                    <image src="facebook-icon.png" alt="Facebook" width="60" height="60">
+                </a>
+                <a href="https://linkedin.com" target="_blank">
+                    <image src="linkedin-icon.png" alt="LinkedIn" width="60" height="60">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <image src="instagram-icon.png" alt="Instagram" width="60" height="60">
+                </a>
+            </div>
         </section>
         <section id="education" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Education</h2>
             <ul>
-                <li><strong>Degree</strong>, Institution Name (Dates) <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
+                <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
+                <li><strong>2nd Level</strong>, Leaving Certificate at St.Kilian's Deutsche Schule Dublin 2019</li>
+                <ul>
+                    <li><strong>Language</strong>, English - Mothertongue</li>
+                    <li><strong>Language</strong>, German - C1 Sprachdiplom</li>
+                    <li><strong>Language</strong>, French - B2 Delf</li>
+                    <li><strong>Language</strong>, Spanish - B1 Language Course Gandia</li>
+                </ul>            
             </ul>
         </section>
         <section id="experience" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Experience</h2>
             <ul>
-                <li><strong>Job Title</strong> at Company Name (Dates) <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-                <li><strong>Job Title</strong> at Company Name (Dates) <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-            </ul>
+                <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
+                <li><strong>Stock Manager</strong>, at Mr.Price January 2024 - Present <br> Managing stock room, stock from Head office and employees as Duty Manager</li>
         </section>
         <section id="projects" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Projects</h2>
-            <ul>
-                <li><strong>Job Title</strong> at Company Name (Dates) <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-                <li><strong>Job Title</strong> at Company Name (Dates) <br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-            </ul>
+            /* carousel section with past projects completed
         </section>
         <section id="skills" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Skills</h2>
             <ul>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</li>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<li>
+                <li>Teamwork</li>
+                <li>Time Management</li>
+                <li>Problem-solving</li>
+                <li>Software Design and Development</li>
+                <li>Database Systems</li>
+                <li>Operating Systems</li>
+                <li>Networking</li>
+                <li>Data Analysis</li>
             </ul>
         </section>
         <section id="contactme" style="padding-top: 160px; margin-top: -60px;>
