--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: relative;
             width: 100%;
             height: 1000px;
-            background-image: url('testimage.jpg.png');
+            background-image: url('splashimage.png');
             background-size: cover;
             background-position: center;
         }
