--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Online CV</title>
     <link href="https://cdn.jsdelivr.net/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaXHHbLZtZTOQzJiKWPSHrWA9e13_BczI&callback=initMap" async defer></script>
     <style>
         body {
             font-family: Arial, sans-serif;
