--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div id="map"></div>
+                    <div id="map" style="width: 100%; height: 400px; border-radius: 8px;"></div>
                 </div>
             </div>
         </section>
