--- a/index.html
+++ b/index.html
@@ -128,7 +128,32 @@
         </section>
         <section id="projects" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Projects</h2>
-            /* carousel section with past projects completed
+            <div id="carouselProjects" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                        <li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselProjects" data-slide-to="1"></li>
+                        <li data-target="#carouselProjects" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="..." alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="..." alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="..." alt="Third slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselProjects" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselProjects" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+            </div>
         </section>
         <section id="skills" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Skills</h2>
