--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="..." alt="First slide">
+                      <img class="d-block w-100" src="splashimage.png" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Second slide">
+                      <img class="d-block w-100" src="splashimage.png" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Third slide">
+                      <img class="d-block w-100" src="splashimage.png" alt="Third slide">
                     </div>
                   </div>
                   <a class="carousel-control-prev" href="#carouselProjects" role="button" data-slide="prev">
