--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             background-position: center;
         }
         .splash-text {
-            position: absolute;
+            position: center;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
