--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </section>
         <section id="projects" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Projects</h2>
-            <div id="carouselProjects" class="carousel slide mt-5" data-ride="carousel">
+            <div id="carouselProjects" class="carousel slide d-flex" data-ride="carousel">
                   <ol class="carousel-indicators">
                         <li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselProjects" data-slide-to="1"></li>
