--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </a>
             </div>
         </section>
-        <section id="education" style="padding-top: 160px; margin-top: -60px;>
+        <section id="education" class="card" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Education</h2>
             <ul>
                 <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
